--- a/wp-content/themes/attitude/style.css
+++ b/wp-content/themes/attitude/style.css
@@ -168,6 +168,7 @@ hr {
 
 /* Text elements */
 p {
+	font-size: 16px;
 	margin-bottom: 15px;
 }
 strong {
@@ -345,11 +346,12 @@ input[type="file"] {
 
 /* Links */
 a {
-	color: #05a9c5;
+	color: #666666;
 	text-decoration: none;
 }
 a:focus, a:active, a:hover {
 	text-decoration: none;
+	color: #afafaf;
 }
 
 /* Images */
@@ -539,7 +541,7 @@ a.more-link:hover {
 }
 #site-logo {
 	float:left;
-  	margin-top: 32px;
+	margin-top: 17px;
 }
 #site-title {
 	font: 36px 'Philosopher', sans-serif;
@@ -549,7 +551,7 @@ a.more-link:hover {
 	color: #555;	
 }
 #site-title a img {
-	vertical-align: inherit;
+	vertical-align: middle;
 	max-width: 978px;	
 }
 #site-title a span, #site-title a:hover, #site-title a:focus, #site-title a:active {
@@ -562,9 +564,14 @@ a.more-link:hover {
 }
 .hgroup-right {
 	float: right;
-	margin-top: 38px;
+	margin-top: 20px;
+	min-width: 230px;
 }
-
+.hgroup-right a,
+.hgroup-right .fa {
+	font-size: 18px;
+	margin-bottom: 5px;
+}
 /* Social Profiles */
 .social-profiles {
 	float: left;
@@ -666,8 +673,8 @@ a.more-link:hover {
 /* =Menu
 -------------------------------------------------------------- */
 #access {
-	border-top: 1px solid #EAEAEA;
-	border-bottom: 1px solid #EAEAEA;
+	border-top: 1px solid #ffcc00;
+	border-bottom: 1px solid #ffcc00;
 }
 #access ul {
 
@@ -675,16 +682,14 @@ a.more-link:hover {
 #access li {
 	float: left;
 	position: relative;
-	padding: 0 20px 0 0;
+
 }
 #access a {
-	color: #777;
+	color: #666666;
 	display: block;
 	float: left;
-	font-size: 14px;
-	text-transform: uppercase;
-	padding: 16px 0 0;	
-	height: 39px;
+	font-size: 18px;
+	padding: 15px 20px;
 }
 #access a:hover, 
 #access ul li.current-menu-item a, 
@@ -692,7 +697,11 @@ a.more-link:hover {
 #access ul li.current-menu-ancestor a, 
 #access ul li.current_page_item a,
 #access ul li:hover > a {
-	color: #05A9C5;
+	background: #ffcc00;
+}
+
+.lang-item img {
+	display: none;
 }
 
 /* Dropdown */
@@ -951,6 +960,12 @@ input.s:focus {
 #content ul ul, #content ol ol, #content ul ol, #content ol ul {
 	margin-bottom: 0;
 }
+
+.header-section {
+	position: relative;
+	margin-bottom: 50px;
+}
+
 .service-item {
 	padding-bottom: 15px;
 }
@@ -983,10 +998,6 @@ input.s:focus {
 	padding-bottom: 0;
 }
 
-#primary {
-	float: left;
-	width: 65.64%;
-}
 #content .post {
 	padding-top: 10px; 
    padding-bottom: 40px;   
@@ -1078,7 +1089,6 @@ input.s:focus {
 .entry-content {
 	padding-bottom: 15px;
 	display: block;
-	overflow: hidden;
 }
 .entry-content table,
 .comment-content table {
@@ -2131,6 +2141,77 @@ div.bbp-submit-wrapper button {
 		margin-bottom: 30px;
 	}
 }
+
+
+@media only screen and (min-width: 1078px) {
+	.header-section {
+		margin-left: -30px;
+		width: 1038px;
+		height: 300px;
+		overflow: hidden;
+	}
+
+	.header-section img {
+		position: absolute;
+		left: 0;
+		width: 1038px;
+		max-width: unset;
+		top: 50%;
+		transform: translate(0,-64%);
+	}
+
+	.header-section .section-content {
+		position: absolute;
+		background: rgba(255, 204, 0, 0.9);
+		right: 30px;
+		top: 0;
+		width: 300px;
+		height: 100%;
+		color: white;
+	}
+
+	.header-section .section-content h1 {
+		padding: 10px 20px;
+		color: white;
+		border-bottom: 1px solid white;
+	}
+
+	.header-section .section-content ul {
+		margin: 0 !important;
+		padding: 10px 20px;
+		font-size: 18px;
+	}
+
+	.header-section .section-content ul li {
+		margin-bottom: 10px;
+		list-style: none;
+	}
+
+	.block {
+		width: 30%;
+		float: left;
+		margin-right: 5%;
+	}
+
+	.block:last-of-type {
+		margin-right: 0;
+	}
+
+	.block img {
+		width: 40px;
+		float: left;
+	}
+
+	.block img + p {
+		display: none;
+	}
+
+	.block h3 {
+		margin-left: 55px;
+		margin-top: 3px;
+	}
+}
+
 
 /* All Mobile Portrait size smaller than 768 (devices and browsers) */
 @media only screen and (max-width: 767px) {
