--- a/wp-content/themes/attitude/style.css
+++ b/wp-content/themes/attitude/style.css
@@ -676,9 +676,6 @@ a.more-link:hover {
 	border-top: 1px solid #ffcc00;
 	border-bottom: 1px solid #ffcc00;
 }
-#access ul {
-
-}
 #access li {
 	float: left;
 	position: relative;
@@ -2144,8 +2141,12 @@ div.bbp-submit-wrapper button {
 
 
 @media only screen and (min-width: 1078px) {
+	#access ul {
+		margin-left: -20px;
+	}
 	.header-section {
 		margin-left: -30px;
+		margin-top: -50px;
 		width: 1038px;
 		height: 300px;
 		overflow: hidden;
@@ -2187,34 +2188,178 @@ div.bbp-submit-wrapper button {
 		list-style: none;
 	}
 
-	.block {
+	.read-more-block {
 		width: 30%;
 		float: left;
 		margin-right: 5%;
 	}
 
-	.block:last-of-type {
+	/* Avoid problems caused by saving page, it uses to wrap the img into a paragraph tag */
+	.read-more-block > *:first-child {
+		margin-bottom: 0;
+	}
+
+	.read-more-block:last-of-type {
 		margin-right: 0;
 	}
 
-	.block img {
+	.read-more-block img {
 		width: 40px;
 		float: left;
 	}
 
-	.block img + p {
+	.read-more-block img + p {
 		display: none;
 	}
 
-	.block h3 {
+	.read-more-block h3 {
 		margin-left: 55px;
 		margin-top: 3px;
 	}
 }
 
+@media only screen and (min-width: 767px) and (max-width: 1078px) {
+	#access ul {
+		margin-left: -20px;
+	}
+	.header-section {
+		margin-left: -20px;
+		margin-top: -50px;
+		width: 708px;
+		height: 300px;
+		overflow: hidden;
+	}
+
+	.header-section img {
+		position: absolute;
+		left: -115px;
+		width: 850px;
+		max-width: unset;
+		top: 50%;
+		transform: translate(0,-64%);
+	}
+
+	.header-section .section-content {
+		position: absolute;
+		background: rgba(255, 204, 0, 0.9);
+		right: 30px;
+		top: 0;
+		width: 300px;
+		height: 100%;
+		color: white;
+	}
+
+	.header-section .section-content h1 {
+		padding: 10px 20px;
+		color: white;
+		border-bottom: 1px solid white;
+	}
+
+	.header-section .section-content ul {
+		margin: 0 !important;
+		padding: 10px 20px;
+		font-size: 18px;
+	}
+
+	.header-section .section-content ul li {
+		margin-bottom: 10px;
+		list-style: none;
+	}
+
+	.read-more-block {
+		width: 100%;
+	}
+
+	/* Avoid problems caused by saving page, it uses to wrap the img into a paragraph tag */
+	.read-more-block > *:first-child {
+		margin-bottom: 0;
+	}
+
+	.read-more-block img {
+		width: 40px;
+		float: left;
+	}
+
+	.read-more-block img + p {
+		display: none;
+	}
+
+	.read-more-block h3 {
+		margin-left: 55px;
+		margin-top: 3px;
+	}
+}
 
 /* All Mobile Portrait size smaller than 768 (devices and browsers) */
 @media only screen and (max-width: 767px) {
+	.hgroup-right {
+		width: 100%;
+		position: relative;
+	}
+	.header-section {
+		margin-left: -15px;
+		margin-top: -40px;
+		width: 450px;
+		height: 300px;
+		overflow: hidden;
+	}
+
+	.header-section img {
+		position: absolute;
+		left: -380px;
+		max-width: unset;
+		top: 50%;
+		transform: translate(0,-64%);
+	}
+
+	.header-section .section-content {
+		position: absolute;
+		background: rgba(255, 204, 0, 0.9);
+		right: 30px;
+		top: 0;
+		width: 300px;
+		height: 100%;
+		color: white;
+	}
+
+	.header-section .section-content h1 {
+		padding: 10px 20px;
+		color: white;
+		border-bottom: 1px solid white;
+	}
+
+	.header-section .section-content ul {
+		margin: 0 !important;
+		padding: 10px 20px;
+		font-size: 18px;
+	}
+
+	.header-section .section-content ul li {
+		margin-bottom: 10px;
+		list-style: none;
+	}
+	.read-more-block {
+		width: 100%;
+	}
+
+	/* Avoid problems caused by saving page, it uses to wrap the img into a paragraph tag */
+	.read-more-block > *:first-child {
+		margin-bottom: 0;
+	}
+
+	.read-more-block img {
+		width: 40px;
+		float: left;
+	}
+
+	.read-more-block img + p {
+		display: none;
+	}
+
+	.read-more-block h3 {
+		margin-left: 55px;
+		margin-top: 3px;
+	}
 	hr { 
 		margin-bottom: 30px;
 	}
@@ -2277,6 +2422,9 @@ div.bbp-submit-wrapper button {
 		float: right;
 		margin-top: 3px;
 		cursor: pointer;
+		position: absolute;
+		right: 0;
+		top: 10px;
 	}
 	.menu-toggle:before {
 		display: block;
@@ -2305,7 +2453,7 @@ div.bbp-submit-wrapper button {
 	}
 	#access a {
 		float: none;
-		padding: 10px 0;
+		padding: 10px;
 		height: inherit;
 	}
 	/* Dropdown */
@@ -2457,6 +2605,9 @@ div.bbp-submit-wrapper button {
 
 /* All Mobile landscape size and All Mini Tablet Portrait size smaller than standard 768 and larger than 480 (devices and browsers) */
 @media only screen and (min-width: 480px) and (max-width: 767px) {
+	#access .container {
+		width: 450px;
+	}
 	input.s:focus {
 		width: 375px;
 	}
@@ -2501,6 +2652,31 @@ div.bbp-submit-wrapper button {
 	}
 	#colophon {
 		margin-bottom: 20px;
+	}
+}
+
+@media only screen and (min-width: 320px) and (max-width: 480px) {
+	.header-section {
+		margin-left: -10px;
+		margin-top: -40px;
+		width: 300px;
+		height: 300px;
+		overflow: hidden;
+	}
+	.header-section .section-content {
+		position: absolute;
+		background: rgba(255, 204, 0, 0.9);
+		right: 0;
+		top: 0;
+		width: 300px;
+		height: 100%;
+		color: #666666;
+	}
+
+	.header-section .section-content h1 {
+		padding: 10px 20px;
+		color: #666666;
+		border-bottom: 1px solid #666666;
 	}
 }
 
